Smaller font sizes to prevent elements jumping around.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -4,6 +4,12 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+@media(min-width:768px) {
+.reduce-size {
+    font-size: 80%;
+}
+}
+
 /* Carousel */
  
 .carousel-control > span {
@@ -426,6 +432,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .nav li a {
     text-transform: uppercase;
+    font-size: 75%;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
@@ -461,6 +468,37 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default .navbar-brand {
+        font-size: 1.3em;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s;
+    }
+
+    .navbar-default .navbar-nav>.active>a {
+        border-radius: 3px;
+    }
+
+    .navbar-default.navbar-shrink {
+        padding: 10px 0;
+        background-color: #292929;
+    }
+
+    .navbar-default.navbar-shrink .navbar-brand {
+        font-size: 1.1em;
+    }
+}
+
+@media(min-width:1024px) {
+    .navbar-default {
+        padding: 25px 0;
+        border: 0;
+        background-color: transparent;
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+    }
+
+    .navbar-default .navbar-brand {
         font-size: 1.6em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
@@ -477,38 +515,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
-        font-size: 1.2em;
-    }
-}
-
-@media(min-width:1024px) {
-    .navbar-default {
-        padding: 25px 0;
-        border: 0;
-        background-color: transparent;
-        -webkit-transition: padding .3s;
-        -moz-transition: padding .3s;
-        transition: padding .3s;
-    }
-
-    .navbar-default .navbar-brand {
-        font-size: 2em;
-        -webkit-transition: all .3s;
-        -moz-transition: all .3s;
-        transition: all .3s;
-    }
-
-    .navbar-default .navbar-nav>.active>a {
-        border-radius: 3px;
-    }
-
-    .navbar-default.navbar-shrink {
-        padding: 10px 0;
-        background-color: #292929;
-    }
-
-    .navbar-default.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
 }
 
@@ -586,6 +593,21 @@ section h3.section-subheading {
     text-transform: none;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
+    font-style: italic;
+    font-weight: 400;
+}
+
+section h2.section-heading-minor {
+    margin-top: 75px;
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+
+section h3.section-subheading-minor {
+    margin-bottom: 75px;
+    text-transform: none;
+    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12px;
     font-style: italic;
     font-weight: 400;
 }
